Add TODO on plotting Americaness

--- a/Final_project_CSCD25.ipynb
+++ b/Final_project_CSCD25.ipynb
@@ -43,7 +43,9 @@
     "# TODO: Data exploration and cleaning before feeding into Word2Vec\n",
     "# TODO: Train-test split, maybe have a validation set, maybe use crossvalidation. Follow getting seed values and finding social dimensions in Word2Vec produced space, from the paper \"Reddit in the Time of COVID, Venia Veselovsky and Ashton Anderson. ICWSM 2023\"\n",
     "# TODO: Figure out where American focused subreddits are in Word2Vec space, maybe by clustering or maybe a regression, and split data into American focused and non-American focused\n",
-    "# TODO: Redo analysis from said paper on both American and non-American focused data\n"
+    "# TODO: Redo analysis from said paper on both American and non-American focused data\n",
+    "\n",
+    "# TODO: Order subreddits by Americanness, to be able to notice any oddities. Make this a function so it can be reapplied as I try different ways to determine Americaness"
    ]
   }
  ],
