Progress towards figuring out how American focused users and subreddits are. Update README with initial plan. Added TODOs

--- a/Final_project_CSCD25.ipynb
+++ b/Final_project_CSCD25.ipynb
@@ -45,7 +45,9 @@
     "# TODO: Figure out where American focused subreddits are in Word2Vec space, maybe by clustering or maybe a regression, and split data into American focused and non-American focused\n",
     "# TODO: Redo analysis from said paper on both American and non-American focused data\n",
     "\n",
-    "# TODO: Order subreddits by Americanness, to be able to notice any oddities. Make this a function so it can be reapplied as I try different ways to determine Americaness"
+    "# TODO: Order subreddits by Americanness, to be able to notice any oddities. Make this a function so it can be reapplied as I try different ways to determine Americaness\n",
+    "\n",
+    "# TODO: Label users with how likely they are to be American, so we can analyze how the percentage of American users, changed over time, and their behavior over time and through COVID"
    ]
   }
  ],
