--- a/full_code/social-dimensions.ipynb
+++ b/full_code/social-dimensions.ipynb
@@ -41,78 +41,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Generate dimensions through seed augmentation\n",
-    "# dimensions = dimen_generator.generate_dimensions_from_seeds([\n",
-    "#     (\"teenagers\", \"RedditForGrownups\"),\n",
-    "#     (\"AskMen\", \"AskWomen\"),\n",
-    "#     (\"democrats\", \"Conservative\"),\n",
-    "#     (\"vagabond\", \"backpacking\"),\n",
-    "#     (\"AskMen\", \"AskMenOver30\"),\n",
-    "#     (\"daddit\", \"Mommit\"),\n",
-    "#     (\"hillaryclinton\", \"The_Donald\"),\n",
-    "#     (\"nyc\", \"nycmeetups\"),\n",
-    "#     (\"memes\", \"ImGoingToHellForThis\"),\n",
-    "#     (\"PS3\", \"PS4\")\n",
-    "# ])\n",
-    "\n",
-    "# The following use subreddits not in the dataset used to generate the vectors\n",
-    "#americanness_seed = [(\"MURICA\", \"Canadia\")]\n",
-    "#americanness_seed = [(\"AskAnAmerican\", \"AskACanadian\")]\n",
-    "#americanness_seed = [(\"buildapc\", \"buildapccanada\")]\n",
-    "\n",
-    "americanness_seed = [(\"\", \"\")]\n",
-    "#americanness_seed = [(\"\", \"\")]\n",
-    "\n",
-    "dimensions = dimen_generator.generate_dimensions_from_seeds(americanness_seed)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Print which seeds were found\n",
-    "#dimen_names = [\"age\", \"gender\", \"partisan\", \"affluence\", \"age B\", \"gender B\", \"partisan B\", \"sociality\", \"edginess\", \"time\"]\n",
-    "dimen_names = [\"American-focus\"]\n",
-    "\n",
-    "for name, dimen in zip(dimen_names, dimensions):\n",
-    "    print(\"Dimension %s:\" % name)\n",
-    "    print(\"\\tSeed: %s\" % dimen[\"seed\"])\n",
-    "    print(\"\\tFound seeds:\")\n",
-    "    for c1, c2 in zip(dimen[\"left_comms\"], dimen[\"right_comms\"]):\n",
-    "        print(\"\\t\\t%s -> %s\" % (c1, c2))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Calculate scores for communities\n",
-    "scores = dimen_generation.score_embedding(vectors, zip(dimen_names, dimensions))\n",
-    "scores.head(5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Save result (compare with scores.csv from repository)\n",
-    "scores.to_csv('scores.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
     "# Finds the dimension for each given seed and dimen_names from seeds_dimen_name_pairs, then stores them in given filename\n",
+    "# Lightly modified from code from https://github.com/CSSLab/social-dimensions\n",
     "def find_dimensions(seeds_dimen_name_pairs, scores_file_name):\n",
     "    seeds = [x[0] for x in seeds_dimen_name_pairs]\n",
     "    dimen_names = [x[1] for x in seeds_dimen_name_pairs]\n",
@@ -147,6 +77,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# The following use subreddits not in the dataset used to generate the vectors\n",
+    "#americanness_seed = [(\"MURICA\", \"Canadia\")]\n",
+    "#americanness_seed = [(\"AskAnAmerican\", \"AskACanadian\")]\n",
+    "#americanness_seed = [(\"buildapc\", \"buildapccanada\")]\n",
+    "\n",
     "find_dimensions(\n",
     "    [((\"personalfinance\", \"PersonalFinanceCanada\"), \"americanness1\")],\n",
     "    \"finance_seeded_americanness_scores.csv\"\n",
